--- a/gulp-start2/src/assets/scss/common/_text.scss
+++ b/gulp-start2/src/assets/scss/common/_text.scss
@@ -1,17 +1,11 @@
 .text {
-    font-family: 'Muli-Regular';
-    line-height: 35px;
-
     &--black {
         color: #1e1e1e;
     }
 
-
     &--white {
-        color: #ffffff;
-    &:hover {
-            color: #6c2c1c;
-        }
+        color: $textColor;
+        @include hov1;
     }
 
     &--orange {
