--- a/gulp-start2/src/assets/scss/blocks/_instagram.scss
+++ b/gulp-start2/src/assets/scss/blocks/_instagram.scss
@@ -11,8 +11,7 @@
     }
 
     &__item {
-        display: flex;
-        flex-direction: column;
+        @include flex (flex, column);
         flex: 1 0 20%;
         min-width: 340px;
         position: relative;
