--- a/gulp-start2/src/assets/scss/blocks/_products.scss
+++ b/gulp-start2/src/assets/scss/blocks/_products.scss
@@ -7,9 +7,7 @@
 
         #{$products}__card {
             flex: 1 0 300px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            @include flex (flex, column, center);
 
             &:first-child {
                 background-color: #632b17;
