--- a/gulp-start2/src/assets/scss/blocks/_story.scss
+++ b/gulp-start2/src/assets/scss/blocks/_story.scss
@@ -17,13 +17,14 @@
                 margin-bottom: 35px;
                 line-height: 40px;
                 letter-spacing: -0.02em;
+                @extend %title;
             }
 
             #{$story}__desc {
                 max-width: 510px;
-                font-size: 18px;
                 line-height: 35px;
                 letter-spacing: -0.1px;
+                @extend %text;
             }
 
             #{$story}__btn {
