--- a/gulp-start2/src/assets/scss/components/_menu.scss
+++ b/gulp-start2/src/assets/scss/components/_menu.scss
@@ -20,6 +20,7 @@
         text-transform: uppercase;
         font-size: 1em;
         font-family: 'MuliBold', sans-serif;
-        color: #fff;
+        color: $textColor;
+
     }
 }
