--- a/gulp-start2/src/assets/scss/blocks/_about.scss
+++ b/gulp-start2/src/assets/scss/blocks/_about.scss
@@ -12,6 +12,14 @@
             -moz-transform: translate(45px, 60px);
             -ms-transform: translate(45px, 60px);
             -o-transform: translate(45px, 60px);
+            @media screen and  (max-width: 768px) {
+                padding-top: 45px;
+                transform: none;
+                -webkit-transform: none;
+                -moz-transform: none;
+                -ms-transform: none;
+                -o-transform: none;
+            }
 
             #{$about}__img-left {
                 width: 100%;
@@ -21,26 +29,35 @@
         #{$about}__info {
             @include flex (flex, column);
             margin: 89px 0px 10px 185px;
+            @media screen and (max-width: 768px) {
+                margin: 0;
+            }
 
             #{$about}__title {
                 line-height: 1.09;
                 letter-spacing: -1.1px;
                 font-size: 55px;
                 @extend %title;
+                @media screen and  (max-width: 360px) {
+                    font-size: 2.75em;
+                }
 
                 #{$about}__title-green {
                     color: #cae941;
                     position: relative;
 
                     &::after {
-                        content: "";
+                        @include pseudo (inline-block,absolute);
                         position: absolute;
                         background-image: url("./../images/photoshop-img/Line-img.png");
                         top: 65px;
                         left: -10px;
                         width: 450px;
                         height: 13px;
-                        display: inline-block;
+                            @media screen and (max-width: 768px) {
+                                display: none;
+                            }
+                        
                     }
                 }
             }
@@ -58,6 +75,11 @@
                     padding-left: 35px;
                     margin-bottom: 20px;
                     font-size: 21px;
+
+                    &:hover {
+                        color:#cae941;
+                        
+}
 
                     &:last-child {
                         margin: 0;
@@ -78,11 +100,12 @@
                 position: relative;
                 padding-left: 29px;
                 margin: 50px 0 94px;
+                @media screen and  (max-width: 360px) {
+                    font-size: 1.12em;
+                }
 
                 &::after {
-                    content: "";
-                    display: inline-block;
-                    position: absolute;
+                    @include pseudo (inline-block,absolute);
                     background-image: url("./../images/photoshop-img/about-Arrow.png");
                     width: 30px;
                     height: 16px;
@@ -93,6 +116,9 @@
                     -moz-transform: translateY(-50%);
                     -ms-transform: translateY(-50%);
                     -o-transform: translateY(-50%);
+                    @media screen and  (max-width: 360px) {
+                        right: 20px;
+                    }
                 }
             }
         }
