--- a/gulp-start2/src/assets/scss/blocks/_blog.scss
+++ b/gulp-start2/src/assets/scss/blocks/_blog.scss
@@ -1,6 +1,12 @@
 .blog {
     $blog: &;
     padding: 100px 0 180px;
+    @media screen and (max-width: 360px) {
+        padding: 100px 0 100px;
+    }
+    @media screen and (max-width: 768px) {
+        padding-bottom: 150px;
+    }
 
     &__wrapper {
         display: flex;
@@ -16,14 +22,22 @@
             position: relative;
 
             &::after {
-                content: "";
+                @include pseudo (inline-block,absolute);
                 width: 687px;
                 height: 12px;
                 background-image: url("./../images/photoshop-img/blog-Line.png");
-                position: absolute;
                 top: 70px;
                 left: 507px;
                 z-index: -2;
+                @media screen and (max-width: 1235px) {
+                    display: none;
+                }
+            }
+
+            #{$blog}__img {
+                @media screen and (max-width: 768px) {
+                    width: 100%;
+                }
             }
         }
 
@@ -32,6 +46,16 @@
             padding-top: 230px;
             margin-left: 70px;
             padding-right: 23px;
+            @media screen and (max-width: 360px) {
+                padding-top: 70px;
+            }
+            @media screen and (max-width: 768px) {
+                padding: {
+                    top: 40px;
+                    right: 0px;
+                }
+                margin-left: 0px;
+            }
 
             #{$blog}__desc-title {
                 color: #f2612d;
@@ -65,10 +89,8 @@
                     position: relative;
     
                     &::after {
-                        content: "";
-                        display: inline-block;
+                        @include pseudo (inline-block,absolute);
                         background-image: url("./../images/photoshop-img/blog-arrow.png");
-                        position: absolute;
                         width: 18px;
                         height: 10px;
                         top: 35%;
