--- a/gulp-start2/src/assets/scss/blocks/_smoothies.scss
+++ b/gulp-start2/src/assets/scss/blocks/_smoothies.scss
@@ -12,6 +12,9 @@
         font-size: 50px;
         letter-spacing: -1px;
         @extend %title;
+        @media screen and (max-width: 360px) {
+            font-size: 2.5em;
+        }
     }
 
     &__text {
@@ -20,12 +23,18 @@
         margin: 0 0 60px;
         text-align: center;
         letter-spacing: -0.1px;
+        @media screen and (max-width: 360px) {
+            font-size: 1.12em;
+        }
     }
 
     &__features {
         display: flex;
         flex-wrap: wrap;
         max-width: 1110px;
+        @media screen and (max-width: 768px) {
+            max-width: 500px;
+        }
     }
 
     &__feature {
@@ -37,6 +46,14 @@
         border: {
             bottom: 1px solid #f6edde;
             right: 1px solid #f6edde;
+        }
+        .feature__text-orange {
+            @media screen and (max-width: 360px) {
+                font-size: 1.25em;
+            }
+        }
+        @media screen and (max-width: 768px) {
+            flex-basis: 50%;
         }
 
         &:nth-child(4) {
