--- a/gulp-start2/src/assets/scss/components/_comment.scss
+++ b/gulp-start2/src/assets/scss/components/_comment.scss
@@ -6,12 +6,19 @@
         display: flex;
         flex-direction: column;
         margin: 40px 60px 0 0;
+        @media screen and (max-width: 768px) {
+            margin-top: 60px;
+            margin-right: 0;
+        }
     }
     
     &__quote {
         line-height: 35px;
         color: $textColor;
         @extend %text;
+        @media screen and (max-width: 360px) {
+            letter-spacing: 0.4px;
+        }
     }
     
     &__cite {
