--- a/gulp-start2/src/assets/scss/blocks/_about.scss
+++ b/gulp-start2/src/assets/scss/blocks/_about.scss
@@ -12,7 +12,8 @@
             -moz-transform: translate(45px, 60px);
             -ms-transform: translate(45px, 60px);
             -o-transform: translate(45px, 60px);
-            @media screen and  (max-width: 768px) {
+
+            @media screen and (max-width: 768px) {
                 padding-top: 45px;
                 transform: none;
                 -webkit-transform: none;
@@ -29,6 +30,7 @@
         #{$about}__info {
             @include flex (flex, column);
             margin: 89px 0px 10px 185px;
+
             @media screen and (max-width: 768px) {
                 margin: 0;
             }
@@ -38,7 +40,8 @@
                 letter-spacing: -1.1px;
                 font-size: 55px;
                 @extend %title;
-                @media screen and  (max-width: 360px) {
+
+                @media screen and (max-width: 360px) {
                     font-size: 2.75em;
                 }
 
@@ -47,17 +50,18 @@
                     position: relative;
 
                     &::after {
-                        @include pseudo (inline-block,absolute);
+                        @include pseudo (inline-block, absolute);
                         position: absolute;
                         background-image: url("./../images/photoshop-img/Line-img.png");
                         top: 65px;
                         left: -10px;
                         width: 450px;
                         height: 13px;
-                            @media screen and (max-width: 768px) {
-                                display: none;
-                            }
-                        
+
+                        @media screen and (max-width: 768px) {
+                            display: none;
+                        }
+
                     }
                 }
             }
@@ -77,16 +81,29 @@
                     font-size: 21px;
 
                     &:hover {
-                        color:#cae941;
-                        
+                        color: #cae941;
+                        animation: scale-up-ver-top 150ms linear both;
+                        -webkit-animation: scale-up-ver-top 150ms linear both;
 }
+
+                    @keyframes scale-up-ver-top {
+                        0% {
+                            transform: scaleY(0.4);
+                            transform-origin: 100% 0%;
+                        }
+
+                        100% {
+                            transform: scaleY(1);
+                            transform-origin: 100% 0%;
+                        }
+                    }
 
                     &:last-child {
                         margin: 0;
                     }
 
                     #{$about}--bold {
-                        font-family:$titleFont;
+                        font-family: $titleFont;
                     }
                 }
             }
@@ -100,12 +117,13 @@
                 position: relative;
                 padding-left: 29px;
                 margin: 50px 0 94px;
-                @media screen and  (max-width: 360px) {
+
+                @media screen and (max-width: 360px) {
                     font-size: 1.12em;
                 }
 
                 &::after {
-                    @include pseudo (inline-block,absolute);
+                    @include pseudo (inline-block, absolute);
                     background-image: url("./../images/photoshop-img/about-Arrow.png");
                     width: 30px;
                     height: 16px;
@@ -116,7 +134,8 @@
                     -moz-transform: translateY(-50%);
                     -ms-transform: translateY(-50%);
                     -o-transform: translateY(-50%);
-                    @media screen and  (max-width: 360px) {
+
+                    @media screen and (max-width: 360px) {
                         right: 20px;
                     }
                 }
