--- a/gulp-start2/src/assets/scss/components/_feature.scss
+++ b/gulp-start2/src/assets/scss/components/_feature.scss
@@ -2,6 +2,10 @@
 
     &__img {
         margin-bottom: 27px;
+        &:hover {
+            transform: translateY(-3px);
+            transition: 1s;
+        }
     }
 
     &__text-orange {
@@ -13,16 +17,12 @@
         color: $featureColor;
         font-size: 25px;
         &:hover {
-            transform: scale(1.5);
+            transform: translateY(-3px);
             transition: 1s;
-            -webkit-transform: scale(1.5);
-            -moz-transform: scale(1.5);
-            -ms-transform: scale(1.5);
-            -o-transform: scale(1.5);
-            -webkit-transition: 1s;
-            -moz-transition: 1s;
-            -ms-transition: 1s;
-            -o-transition: 1s;
+            -webkit-transform: translateY(-3px);
+            -moz-transform: translateY(-3px);
+            -ms-transform: translateY(-3px);
+            -o-transform: translateY(-3px);
 }
     }
 }
