--- a/gulp-start2/src/assets/scss/components/_menu.scss
+++ b/gulp-start2/src/assets/scss/components/_menu.scss
@@ -13,6 +13,18 @@
     }
 
     &__item {
+        &:hover {
+            transform: translateY(-5px);
+            transition: 1s;
+            -webkit-transform: translateY(-5px);
+            -moz-transform: translateY(-5px);
+            -ms-transform: translateY(-5px);
+            -o-transform: translateY(-5px);
+            -webkit-transition: 1s;
+            -moz-transition: 1s;
+            -ms-transition: 1s;
+            -o-transition: 1s;
+        }
         @media screen and (max-width: 768px) {
             margin-bottom: 30px;
         }
@@ -27,5 +39,6 @@
         font-size: 1em;
         font-family: 'MuliBold', sans-serif;
         color: $textColor;
+        
     }
 }
