--- a/gulp-start2/src/assets/scss/main.scss
+++ b/gulp-start2/src/assets/scss/main.scss
@@ -20,6 +20,7 @@
 @import "./blocks/instagram";
 @import "./components/sub-social";
 @import "./layout/_footer";
+@import "./libs/animate.scss";
 
 @import "./abstracts/media";
 
